# agent-action-capsule

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  neutrality_scan.py
.github/ISSUE_TEMPLATE/: bug_report.md  spec_issue.md
.github/workflows/: conformance.yml  neutrality.yml  python.yml  spec.yml
docs/: ledger-grade.md  verification-depths.md
docs/interop/: aac-aep-digest-binding.md  aac-aep-digest-handshake.md  aac-aep-digest-threading-figure.md  aac-aep-interop-artifacts.md  aac-aep-scitt-digest-binding-vector.json  aac-eatf-cross-verify-notes.md  aac-permitreceipt-mandate-binding-profile.md  aac-vs-aep-comparison.md  draft-hardware-tee-effect-attestation.md
docs/interop/purchase-example/: capsule.json  output.json  prompt.json  (+1 more)
examples/: build_and_verify.py  selective_disclosure_quickstart.py
go/: go.mod
go/canonical/: canonical.go
go/registries/: registries.go
go/verify/: verify.go
interop-vectors/: README.md
interop-vectors/composition/: DESIGN-NOTE.md  README.md  RUNKIT.md  SHA256SUMS  action.json
interop-vectors/provenance-binding/: QUADX-KIT.md  RUNKIT.md  _gen_vectors.py
python/: README.md  pyproject.toml
python/agent_action_capsule/: __init__.py  anchor.py  bilateral.py  canonical.py  cli.py  contracts.py  emit.py  history.py  parse.py  registries.py  selective_disclosure.py  transparent.py  verify.py  verify_composition.py  verify_composition_orprg.py
python/agent_action_capsule/data/: REGISTRY.md
python/agent_action_capsule/integrations/: __init__.py  crewai.py  langchain.py
python/scripts/: generate_vectors.py
python/tests/: conftest.py  test_acceptance.py  test_anchor.py  test_anchor_wire.py  test_bilateral.py  test_canonical.py  test_cli.py  test_contracts.py  test_crosslang_go.py  test_domain_provenance.py  test_emit.py  test_emit_crewai.py  test_emit_langchain.py  test_history.py  test_import_boundary.py  test_interop_digest_binding.py  test_orprg_composition.py  test_parse.py  test_permitreceipt_mandate_profile.py  test_registries.py  test_scitt_offline.py  test_selective_disclosure.py  test_vectors.py  test_verify.py  test_w1_canonicalization.py  test_w2_field_matrix.py  test_w3_combinatorics.py  test_w6_conformance.py  test_w7_fuzz.py  test_w9_format_version.py
python/tests/fixtures/: machine-mandate-run-credential-preimage.jwt
python/tests/fuzz/: baseline.json
spec/: Makefile  REGISTRY.md  _draft-impl-status-interim.md  _draft-impl-status-post-go.md  cpb-provisional-registry.md  draft-mih-agent-bilateral-attestation-00.md  draft-mih-agent-bilateral-attestation-00.txt  draft-mih-agent-bilateral-attestation-00.xml  draft-mih-agent-bilateral-attestation-01.md  draft-mih-agent-bilateral-attestation-01.txt  draft-mih-agent-bilateral-attestation-01.xml  draft-mih-scitt-agent-action-capsule-00.md  draft-mih-scitt-agent-action-capsule-00.txt  draft-mih-scitt-agent-action-capsule-00.xml  draft-mih-scitt-agent-action-capsule-01.md  draft-mih-scitt-agent-action-capsule-01.txt  draft-mih-scitt-agent-action-capsule-01.xml  draft-mih-scitt-agent-action-capsule-02.md  draft-mih-scitt-agent-action-capsule-02.txt  draft-mih-scitt-agent-action-capsule-02.xml  draft-mih-scitt-agent-action-capsule-sd-cwt-00.md  draft-mih-scitt-agent-action-capsule-sel-disc-00.md  draft-mih-scitt-agent-action-capsule-sel-disc-00.txt  draft-mih-scitt-agent-action-capsule-sel-disc-00.xml  draft-mih-sokolov-scitt-payload-binding-00.md  draft-mih-sokolov-scitt-payload-binding-00.txt  draft-mih-sokolov-scitt-payload-binding-00.xml  section-map.md
test-vectors/: README.md  SHA256SUMS  vectors.json
test-vectors/composition/: README.md  RUNKIT.md  SHA256SUMS  verify_composition.py
test-vectors/honesty-dishonest-human-disposed/: expected.json  input.json
test-vectors/neg-approver-invalid/: expected.json  input.json
test-vectors/neg-attestation-missing-when-required/: expected.json  input.json
test-vectors/neg-attestation-present-when-not-applicable/: expected.json  input.json
test-vectors/neg-capsule-id-mismatch/: expected.json  input.json
test-vectors/neg-chain-missing-parent/: expected.json  input.json
test-vectors/neg-confirmed-without-response/: expected.json  input.json
test-vectors/neg-float-in-digest-field/: expected.json  input.json
test-vectors/neg-format-version-unknown/: expected.json  input.json
test-vectors/neg-never-dispatch-confirmed-no-response/: expected.json  input.json
test-vectors/neg-never-dispatch-conflict/: expected.json  input.json
test-vectors/neg-never-dispatch-with-dispatched-effect/: expected.json  input.json
test-vectors/neg-unsafe-integer-in-digest-field/: expected.json  input.json
test-vectors/pos-blocked/: expected.json  input.json
test-vectors/pos-concurrent-supersedes/: expected.json  input.json
test-vectors/pos-confirmed-runtime-claimed/: expected.json  input.json
test-vectors/pos-deferred/: expected.json  input.json
test-vectors/pos-denied/: expected.json  input.json
test-vectors/pos-dispatched-unconfirmed-required/: expected.json  input.json
test-vectors/pos-errored/: expected.json  input.json
test-vectors/pos-executed-confirmed/: expected.json  input.json
test-vectors/pos-failed-required/: expected.json  input.json
test-vectors/pos-hitl-dispatched/: expected.json  input.json
test-vectors/pos-not-applicable-absent/: expected.json  input.json
test-vectors/pos-planned-carve/: expected.json  input.json
test-vectors/pos-reverted-required/: expected.json  input.json
test-vectors/pos-supersedes-chain/: expected.json  input.json
test-vectors/pos-timeout-post-dispatch/: expected.json  input.json
test-vectors/pos-timeout-pre-dispatch/: expected.json  input.json
test-vectors/pos-unknown-effect-attestation/: expected.json  input.json
test-vectors/pos-unknown-effect-type/: expected.json  input.json
test-vectors/pos-unknown-verdict-class/: expected.json  input.json
test-vectors/provenance-binding/: QUADX-KIT.md  RUNKIT.md  verify_provenance.py
(+17 files in other folders)
