# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-action-capsule"
version = "0.1.0"
description = "Reference emit + verify library for the Agent Action Capsule SCITT profile (draft-mih-scitt-agent-action-capsule). Includes the rungs 1+2+6 CORE: emit, record, anchor client, self-attest."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Action State Group" }]
keywords = ["scitt", "cose", "agent", "capsule", "verification", "transparency"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Development Status :: 3 - Alpha",
]
# Runtime deps intentionally minimal (stdlib only): JCS/SHA-256 are implemented
# here; the COSE_Sign1 envelope is verified by the SCITT/COSE substrate
# (scitt-cose), not re-implemented in this package.
dependencies = []

[project.urls]
Homepage = "https://github.com/action-state-group/agent-action-capsule"
Source = "https://github.com/action-state-group/agent-action-capsule"
Draft = "https://datatracker.ietf.org/doc/draft-mih-scitt-agent-action-capsule/"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
# OPTIONAL two-layer verification: the SCITT/COSE substrate verifier. The
# payload-only core stays stdlib-only; this extra is needed only for
# `verify --transparent`. scitt-cose is the public action-state-group/scitt-cose
# package (deps: cbor2 + cryptography); it drags in nothing private.
transparent = ["scitt-cose>=0.1.1"]

[project.scripts]
agent-action-capsule = "agent_action_capsule.cli:main"

[tool.setuptools]
packages = ["agent_action_capsule"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
